# dtu-02476_mlops

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  cloudbuild_dockerfiles.yaml  cloudbuild_dockerfiles_api.yaml  cloudbuild_dockerfiles_train.yaml  config_vertexai_train_cpu.yaml  data.dvc  docker-compose.yaml  docker-run-train.sh  models.dvc  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_predict.txt  requirements_train.txt
.dvc/: config
.github/workflows/: buildtrigger.yml  codecheck.yml  contributors.yml  main.yml  tests.yml
docker/api_fastapi/: Dockerfile
docker/api_streamlit/: Dockerfile
docker/predict/: Dockerfile  entrypoint.sh
docker/train/: Dockerfile  entrypoint.sh
docker/wandb/: Dockerfile
dockerfiles/: fast_api_predict_model.dockerfile  predict_model.dockerfile  st_predict_model.dockerfile  train_model.dockerfile  wandb.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
mlops_group8/: __init__.py  eval_model.py  predict_fastapi.py  predict_model.py  predict_timm.py  predicter_model.py  streamlit_app.py  sweep_train_model.py  train_model.py  trainer_model.py  validate_model.py  wandb_access.py  wandb_tester.py
mlops_group8/config/: default_config.yaml  sweep.yaml  test_config.yaml
mlops_group8/data/: make_dataset.py  make_unittest_data.py
mlops_group8/tests/: test_predict.ipynb
models/: classes.json
notebooks/: get_data.ipynb  test_predict.ipynb
reports/: README.md
tests/: __init__.py  test_data.py  test_model.py  test_predict.py  test_training.py
tests/data/: classes.json  (+10 more)
(+15 files in other folders)
